fix css img overflow change font to d2coding apply mathjax

--- a/css/theme.css
+++ b/css/theme.css
@@ -5,6 +5,8 @@
 body {
     padding-top: 60px;
     padding-bottom: 60px;
+    font-family: "D2Coding", menlo, consolas, courier, "courier new", fixed-width;
+    overflow: auto;
 }
 img {
   max-width: 100%;
